--- a/SmartPortal/SmartPortal.csproj
+++ b/SmartPortal/SmartPortal.csproj
@@ -44,7 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
+    <Reference Include="EntityFramework">
+      <HintPath>..\SmartAdmin\bin\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Smart.Utility">
       <HintPath>..\SmartAdmin\bin\Smart.Utility.dll</HintPath>
