--- a/SmartPortal/SmartPortal.csproj
+++ b/SmartPortal/SmartPortal.csproj
@@ -45,11 +45,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\SmartAdmin\bin\EntityFramework.dll</HintPath>
+      <HintPath>..\Lib\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Smart.Utility">
-      <HintPath>..\SmartAdmin\bin\Smart.Utility.dll</HintPath>
+      <HintPath>..\Lib\Smart.Utility.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
